--- a/src/index.html
+++ b/src/index.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" href="./favicon.ico">
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet">
     <title>Double excel</title>
 </head>
 <body>
-    <div id="app"></div>
+    <div id="app"> 
+</div>
 </body>
 </html>
